--- a/src/prompts/Plan.mdx
+++ b/src/prompts/Plan.mdx
@@ -4,7 +4,7 @@ Title: {props.ticketTitle}
 Description: {props.ticketDescription}
 Category: {props.ticketCategory}
 Acceptance Criteria:
-{(props.acceptanceCriteria ?? []).map((c, i) => `${i + 1}. ${c}`).join('\n')}
+{(Array.isArray(props.acceptanceCriteria) ? props.acceptanceCriteria : []).map((c, i) => `${i + 1}. ${c}`).join('\n')}
 
 ## Research Context
 
